--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -23,4 +23,10 @@
     <!-- Android standard ICS color -->
 
     <color name="colore969292">#969292</color>
+
+    <color name="text_color">#FEBB50</color>
+    <color name="white">#FFFFFF</color>
+    <color name="orange">#FF8111</color>
+    <color name="wheel_unselect_text">#c2c1c1</color>
+    <color name="wheel_bg">#f2f2f2</color>
 </resources>
