--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -15,4 +15,53 @@
     <style name="TabLayoutTextStyle">
         <item name="android:textSize">14dp</item>
     </style>
+
+
+    //登录页面
+
+    <style name="login_field">
+        <item name="android:gravity">center_vertical</item>
+        <item name="android:layout_height">47dp</item>
+    </style>
+
+    <style name="login_field2">
+        <item name="android:gravity">center_vertical</item>
+        <item name="android:layout_height">40dp</item>
+    </style>
+    <style name="login_field.account">
+        <item name="android:layout_gravity">center_vertical</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_marginLeft">15dp</item>
+        <item name="android:layout_marginRight">10dp</item>
+    </style>
+
+    <style name="login_field.account2">
+        <item name="android:layout_gravity">center_vertical</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_width">60dp</item>
+        <item name="android:layout_marginLeft">15dp</item>
+        <item name="android:layout_marginRight">10dp</item>
+    </style>
+
+    <style name="login_field.value">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:textCursorDrawable">@null</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:background">@android:color/transparent</item>
+    </style>
+
+    //按钮样式
+
+    <style name="SmsButton" parent="Widget.AppCompat.Button.Borderless">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">45dp</item>
+        <item name="android:layout_marginLeft">25dp</item>
+        <item name="android:layout_marginRight">25dp</item>
+        <item name="android:textSize">18sp</item>
+        <item name="android:textColor">@color/btn_textcolor</item>
+        <item name="android:background">@drawable/test_button_selector</item>
+    </style>
+
 </resources>
