--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,6 +10,7 @@
     <color name="colord9d9d9">#d9d9d9</color>
     <color name="colord2b2b2b">#2b2b2b</color>
     <color name="color3e3e3e">#3e3e3e</color>
+    <color name="color333333">#333333</color>
     <color name="colorAEAEAE">#AEAEAE</color>
     <color name="color4a4a4a">#4a4a4a</color>
     <color name="colorf8f8f8">#f8f8f8</color>
