新增添加订单页面

--- a/app/src/main/res/layout/fragemnt_main_tenance.xml
+++ b/app/src/main/res/layout/fragemnt_main_tenance.xml
@@ -33,15 +33,16 @@
                     android:textSize="32px" />
 
                 <TextView
+                    android:id="@+id/tv_add_order"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
+                    android:layout_marginRight="20px"
+                    android:background="@drawable/shape_btn_white"
                     android:paddingBottom="8px"
                     android:paddingLeft="15px"
                     android:paddingRight="15px"
                     android:paddingTop="8px"
-                    android:layout_marginRight="20px"
-                    android:background="@drawable/shape_btn_white"
                     android:text="新增订单"
                     android:textColor="@color/colorWhite"
                     android:textSize="30px" />
