--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,6 +18,7 @@
     <color name="colorcccccc">#cccccc</color>
     <color name="colorC8241D">#C8241D</color>
     <color name="color999999">#999999</color>
+    <color name="color666666">#666666</color>
     <color name="color000000">#000000</color>
     <!-- Android standard ICS color -->
     <!-- Android standard ICS color -->
