--- a/lib_common/src/main/res/layout/comon_tarbar_layout.xml
+++ b/lib_common/src/main/res/layout/comon_tarbar_layout.xml
@@ -1,90 +1,80 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-   >
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
+
 
     <LinearLayout
+        android:id="@+id/lly_head"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
-
+        android:layout_height="40dp"
+        android:background="@color/colorDefault"
+        android:orientation="horizontal">
 
         <LinearLayout
-            android:id="@+id/lly_head"
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:background="@color/colorWhite"
-            android:orientation="horizontal">
+            android:id="@+id/lly_left"
+            android:layout_width="40dp"
+            android:layout_height="match_parent"
+            android:gravity="center">
 
-            <LinearLayout
-                android:id="@+id/lly_left"
-                android:layout_width="40dp"
-                android:layout_height="match_parent"
-                android:gravity="center">
-
-                <ImageView
-                    android:id="@+id/id_leftBtnImg"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/back_icon" />
-            </LinearLayout>
-
-            <TextView
-                android:id="@+id/tv_title"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:text="标题"
-                android:textColor="@color/colord2b2b2b"
-                android:textSize="16dp" />
-
-            <LinearLayout
-                android:id="@+id/lly_right"
+            <ImageView
+                android:id="@+id/id_leftBtnImg"
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:gravity="center"
-                android:minWidth="40dp"
-                android:orientation="horizontal">
-
-                <ImageView
-                    android:id="@+id/img_right"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:visibility="gone" />
-
-                <TextView
-                    android:id="@+id/tv_right"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_marginRight="8dp"
-                    android:gravity="center_vertical|right"
-                    android:singleLine="true"
-                    android:textColor="@color/colord2b2b2b"
-                    android:textSize="14dp"
-                    android:visibility="gone" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/lly_more"
-                android:layout_width="40dp"
-                android:layout_height="match_parent"
-                android:gravity="center"
-                android:orientation="horizontal"
-                android:visibility="gone">
-
-                <ImageView
-                    android:id="@+id/img_more"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical" />
-            </LinearLayout>
-
+                android:layout_height="wrap_content"
+                android:src="@drawable/image_back_icon" />
         </LinearLayout>
 
-        <View
-            android:id="@+id/v_xian"
-            android:layout_width="match_parent"
-            android:layout_height="0.5dp"
-            android:background="@color/colorLine" />
+        <TextView
+            android:id="@+id/tv_title"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:textColor="@color/colorWhite"
+            android:textSize="16dp" />
+
+        <LinearLayout
+            android:id="@+id/lly_right"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:minWidth="40dp"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/img_right"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:visibility="gone" />
+
+            <TextView
+                android:id="@+id/tv_right"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginRight="8dp"
+                android:gravity="center_vertical|right"
+                android:singleLine="true"
+                android:textColor="@color/colorWhite"
+                android:textSize="14dp"
+                android:visibility="gone" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/lly_more"
+            android:layout_width="40dp"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:orientation="horizontal"
+            android:visibility="gone">
+
+            <ImageView
+                android:id="@+id/img_more"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical" />
+        </LinearLayout>
+          
     </LinearLayout>
+
+
 </layout>
