--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -84,6 +84,7 @@
         </LinearLayout>
         </LinearLayout>
         <TextView
+            android:visibility="gone"
             android:layout_marginTop="20dp"
             android:layout_alignParentRight="true"
             android:id="@+id/forgetpwd"
