--- a/app/src/main/res/layout/fragemnt_mine.xml
+++ b/app/src/main/res/layout/fragemnt_mine.xml
@@ -24,6 +24,7 @@
 
         </com.zhy.autolayout.AutoLinearLayout>
         <com.zhy.autolayout.AutoRelativeLayout
+            android:id="@+id/pwd"
             android:layout_marginTop="20dp"
             android:layout_width="match_parent"
             android:layout_height="90px"
