--- a/app/src/main/res/layout/item_maintenance_layout.xml
+++ b/app/src/main/res/layout/item_maintenance_layout.xml
@@ -8,6 +8,7 @@
         android:orientation="vertical">
 
         <com.zhy.autolayout.AutoRelativeLayout
+            android:id="@+id/rly_item"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingBottom="20px"
