--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -31,4 +31,8 @@
     <color name="orange">#FF8111</color>
     <color name="wheel_unselect_text">#c2c1c1</color>
     <color name="wheel_bg">#f2f2f2</color>
+    <color name="colorF15453">#F15453</color>
+    <color name="color00A0F1">#00A0F1</color>
+    <color name="colorFACF28">#FACF28</color>
+
 </resources>
