--- a/app/src/main/res/layout/fragemnt_record.xml
+++ b/app/src/main/res/layout/fragemnt_record.xml
@@ -7,52 +7,33 @@
         android:background="@color/colorBackground"
         android:orientation="vertical">
 
+
         <com.zhy.autolayout.AutoLinearLayout
+            android:id="@+id/lly_type"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/colorTheme"
-            android:orientation="vertical">
+            android:layout_height="80px"
+            android:background="#F8F8F8"
+            android:gravity="center_vertical"
+            android:orientation="vertical"
+            android:paddingLeft="20px">
 
-
-            <com.zhy.autolayout.AutoLinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="60px"
-                android:layout_marginBottom="50px"
-                android:layout_marginTop="48px"
-                android:gravity="center_vertical"
-                android:orientation="horizontal">
-
-                <EditText
-                    android:id="@+id/et_name"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_marginLeft="28px"
-                    android:layout_weight="1"
-                    android:background="@drawable/shape_home_search_bg"
-                    android:gravity="center"
-                    android:hint="请输入记录内容进行搜索"
-                    android:textColor="@color/color333333"
-                    android:textSize="28px"
-
-                    />
-
-                <ImageView
-                    android:id="@+id/sousuo"
-                    android:layout_width="50px"
-                    android:layout_height="50px"
-                    android:layout_marginLeft="20px"
-                    android:layout_marginRight="20px"
-                    android:src="@mipmap/home_search_icon" />
-
-            </com.zhy.autolayout.AutoLinearLayout>
+            <TextView
+                android:id="@+id/tv_type"
+                android:text="预警类型"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/colorTheme"
+                android:textSize="28px" />
 
 
         </com.zhy.autolayout.AutoLinearLayout>
+
 
         <com.scwang.smartrefresh.layout.SmartRefreshLayout
             android:id="@+id/srl_body"
             android:layout_width="match_parent"
             android:layout_height="0dp"
+            android:background="@color/colorWhite"
             android:layout_weight="1">
 
             <android.support.v7.widget.RecyclerView
