--- a/app/src/main/res/layout/fragemnt_main_tenance.xml
+++ b/app/src/main/res/layout/fragemnt_main_tenance.xml
@@ -14,7 +14,7 @@
             android:layout_height="80px"
             android:background="#F8F8F8"
             android:gravity="center_vertical"
-            android:orientation="vertical"
+            android:orientation="horizontal"
             android:paddingLeft="20px">
 
             <TextView
@@ -24,7 +24,11 @@
                 android:layout_height="wrap_content"
                 android:textColor="@color/colorTheme"
                 android:textSize="28px" />
-
+            <ImageView
+                android:layout_marginLeft="10px"
+                android:layout_width="wrap_content"
+                android:src="@mipmap/choose_down_icon"
+                android:layout_height="wrap_content" />
 
         </com.zhy.autolayout.AutoLinearLayout>
 
