--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -44,10 +44,19 @@
                 android:layout_height="wrap_content"
                 android:visibility="gone" />
             <ImageView
+                android:visibility="gone"
                 android:id="@+id/login_phone"
                 android:layout_width="17dp"
                 android:layout_height="17dp"
                 android:layout_marginRight="15dp" />
+            <ImageView
+                android:id="@+id/LoginSeleteBtn"
+                android:layout_width="wrap_content"
+                android:layout_height="44dp"
+                android:layout_marginRight="18dp"
+
+                android:contentDescription="@string/app_name"
+                android:src="@drawable/login_more_up" />
         </LinearLayout>
 
         <View
@@ -56,6 +65,15 @@
             android:layout_marginLeft="15dp"
             android:layout_marginRight="15dp"
             android:background="#dddddd" />
+            <android.support.v7.widget.RecyclerView
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="15dp"
+                android:id="@+id/LoginRecyclerView"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:cacheColorHint="#00000000"
+                android:divider="@color/white"
+                android:visibility="gone"></android.support.v7.widget.RecyclerView>
         <!--密码-->
         <LinearLayout
             style="@style/login_field"
@@ -83,6 +101,19 @@
                 />
         </LinearLayout>
         </LinearLayout>
+        <CheckBox
+            android:visibility="gone"
+            android:layout_marginTop="10px"
+            android:layout_marginLeft="24px"
+            android:layout_gravity="left"
+            android:id="@+id/RememberPasswordCheckBox"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:scaleX="0.8"
+            android:scaleY="0.8"
+            android:textSize="14sp"
+            android:textColor="@color/colorD0D0D0"
+            android:text="记住密码"/>
         <TextView
             android:visibility="gone"
             android:layout_marginTop="20dp"
