--- a/app/src/main/res/layout/activity_record_detaul.xml
+++ b/app/src/main/res/layout/activity_record_detaul.xml
@@ -332,7 +332,7 @@
                         android:textSize="28px" />
                     <!--项目Id-->
                     <View
-
+android:visibility="gone"
                         android:id="@+id/view_line10"
                         android:layout_width="match_parent"
                         android:layout_height="1px"
@@ -342,7 +342,7 @@
                         android:background="@color/colorLine" />
 
                     <TextView
-
+                        android:visibility="gone"
                         android:id="@+id/tv_hint_11"
                         android:layout_width="190px"
                         android:layout_height="wrap_content"
@@ -352,7 +352,7 @@
                         android:textSize="28px" />
 
                     <TextView
-
+                        android:visibility="gone"
                         android:id="@+id/tv_11"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
