--- a/app/src/main/res/layout/fragemnt_mine.xml
+++ b/app/src/main/res/layout/fragemnt_mine.xml
@@ -54,6 +54,7 @@
         </com.zhy.autolayout.AutoRelativeLayout>
 
         <com.zhy.autolayout.AutoRelativeLayout
+            android:visibility="gone"
             android:layout_width="match_parent"
             android:layout_height="90px"
             android:layout_marginTop="1px"
