--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -34,5 +34,6 @@
     <color name="colorF15453">#F15453</color>
     <color name="color00A0F1">#00A0F1</color>
     <color name="colorFACF28">#FACF28</color>
+    <color name="colorD0D0D0">#D0D0D0</color>
 
 </resources>
