--- a/lib_common/src/main/res/layout/comon_tarbar_layout.xml
+++ b/lib_common/src/main/res/layout/comon_tarbar_layout.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
 
-    <LinearLayout
+    <RelativeLayout
         android:id="@+id/lly_head"
         android:layout_width="match_parent"
         android:layout_height="40dp"
@@ -23,11 +23,23 @@
                 android:src="@drawable/image_back_icon" />
         </LinearLayout>
 
+
+        <TextView
+            android:id="@+id/tv_left_txt"
+            android:layout_width="36dp"
+            android:layout_height="match_parent"
+            android:layout_toRightOf="@+id/lly_left"
+            android:gravity="center"
+            android:visibility="gone"
+            android:textColor="@color/colorWhite"
+            android:textSize="14dp" />
+
         <TextView
             android:id="@+id/tv_title"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_weight="1"
+            android:layout_centerInParent="true"
+
             android:gravity="center"
             android:textColor="@color/colorWhite"
             android:textSize="16dp" />
@@ -36,6 +48,7 @@
             android:id="@+id/lly_right"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
+            android:layout_alignParentRight="true"
             android:gravity="center"
             android:minWidth="40dp"
             android:orientation="horizontal">
@@ -57,24 +70,27 @@
                 android:textColor="@color/colorWhite"
                 android:textSize="14dp"
                 android:visibility="gone" />
+
+            <LinearLayout
+                android:id="@+id/lly_more"
+                android:layout_width="40dp"
+                android:layout_height="match_parent"
+                android:layout_alignParentRight="true"
+                android:gravity="center"
+                android:orientation="horizontal"
+                android:visibility="gone">
+
+                <ImageView
+                    android:id="@+id/img_more"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:src="@color/colorWhite" />
+            </LinearLayout>
         </LinearLayout>
 
-        <LinearLayout
-            android:id="@+id/lly_more"
-            android:layout_width="40dp"
-            android:layout_height="match_parent"
-            android:gravity="center"
-            android:orientation="horizontal"
-            android:visibility="gone">
 
-            <ImageView
-                android:id="@+id/img_more"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical" />
-        </LinearLayout>
-          
-    </LinearLayout>
+    </RelativeLayout>
 
 
 </layout>
